@@ -1,45 +1,36 @@
 package com.familink.backend.enums;
 
-
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static com.familink.backend.enums.Permission.*;
-
-
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(
-            Set.of(
-                    USER_READ,
-                    USER_UPDATE,
-                    USER_DELETE,
-                    USER_CREATE
-            )),
+    USER(Collections.emptySet()),
     ADMIN(
             Set.of(
-                    ADMIN_READ,
-                    ADMIN_UPDATE,
-                    ADMIN_DELETE,
-                    ADMIN_CREATE,
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
+                    Permission.ADMIN_READ,
+                    Permission.ADMIN_UPDATE,
+                    Permission.ADMIN_DELETE,
+                    Permission.ADMIN_CREATE,
+                    Permission.MANAGER_READ,
+                    Permission.MANAGER_UPDATE,
+                    Permission.MANAGER_DELETE,
+                    Permission.MANAGER_CREATE
             )
     ),
     MANAGER(
             Set.of(
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
+                    Permission.MANAGER_READ,
+                    Permission.MANAGER_UPDATE,
+                    Permission.MANAGER_DELETE,
+                    Permission.MANAGER_CREATE
             )
     )
 
@@ -57,4 +48,3 @@ public enum Role {
         return authorities;
     }
 }
-
